# windows-sonar-gh-actions

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pytest.ini  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml  sonar-project.properties
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/workflows/: main-workflow.yaml  pr-workflow.yaml
src/sonaronwindows/: calculator.py
tests/sonaronwindows/: test_calculator.py
