[tool.poetry]
name = "sonaronwindows"
version = "0.1.8"
description = "Demo of Sonar scan for GitHub Actions using the Windows OS"
authors = ["aqib-bhat"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
structlog = "^25.2.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=6.2.5"
black = "^25.1.0"
devtools = "^0.12.2"
flake8 = "^7.2.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"
pylint = "^3.3.6"
pytest-cov = "^6.1.1"
pytest-randomly = "^3.15.0"
python-semantic-release = "^7.32.2"

[tool.semantic_release]
version_variable = "pyproject.toml:version"
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "poetry build"
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false
remove_dist = false                         # do NOT remove distribution files
patch_without_tag = true                    # patch release by default

[tool.black]
line-length = 90
target-verson = ["py311"]

[tool.isort]
profile = "black"
skip = [".conda", ".venv", "build"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
