[tool.poetry]
name = "sonaronwindows"
version = "0.2.4"
description = "Demo of Sonar scan for GitHub Actions using the Windows OS"
authors = ["aqib-bhat"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
structlog = "^25.3.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=6.2.5"
black = "^25.1.0"
devtools = "^0.12.2"
flake8 = "^7.2.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"
pylint = "^3.3.7"
pytest-cov = "^6.1.1"
pytest-randomly = "^3.15.0"
python-semantic-release = "^9.21.1"

[tool.semantic_release]
commit_parser = "conventional"
commit_parser_options = { default_bump_level = 2 }
major_on_zero = true
version_toml = ["pyproject.toml:tool.poetry.version"]
build_command = "poetry build"

[tool.semantic_release.changelog]
default_templates = { changelog_file = "CHANGELOG.md" }
exclude_commit_patterns = [
    '''ci(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
    '''build\((?!deps\): .+)''',
    '''Merged? .*''',
    '''Initial Commit.*''',
    # Old semantic-release version commits
    '''^\d+\.\d+\.\d+''',
]
mode = "update"

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease = false
prerelease_token = "rc"

[tool.semantic_release.publish]
upload_to_vcs_release = true

[tool.black]
line-length = 90
target-verson = ["py311"]

[tool.isort]
profile = "black"
skip = [".conda", ".venv", "build"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
